public class ClienteNormal extends Cliente{

	public ClienteNormal(String nombre, String cédula) {
		super(nombre, cédula);
	}
}