public abstract class Producto {
	String nombre;
	double precio;

	public Producto(String nombre, double precio) {
		this.nombre = nombre;
		this.precio = precio;
	}

	public String getNombre() {
		return nombre;
	}
	public double getPrecio(){
		return precio;
	}

	abstract double getIVA();

}